case-studies/03-ticket_booking/NetworkPolicy.yaml
# Step 1: Block ALL ingress and egress by default
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: booking
spec:
  podSelector: {}          # applies to ALL pods in namespace
  policyTypes:
  - Ingress
  - Egress

---
# Step 2: Allow booking-api to reach postgres only
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-booking-to-postgres
  namespace: booking
spec:
  podSelector:
    matchLabels:
      app: booking-api
  policyTypes: [Egress]
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - protocol: TCP
      port: 5432
